cmake_minimum_required(VERSION 3.8)
project(button)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)

add_executable(button src/button.cpp)
ament_target_dependencies(button rclcpp sensor_msgs std_msgs) 

install(TARGETS
  button
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
